// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/slider/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="left:0%;right:auto;width:30%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="dcloud-slider-handle"
      role="slider"
      style="left:30%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "1": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track dcloud-slider-track-1"
      style="left:20%;right:auto;width:30%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="dcloud-slider-handle dcloud-slider-handle-1"
      role="slider"
      style="left:20%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="dcloud-slider-handle dcloud-slider-handle-2"
      role="slider"
      style="left:50%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "2": Disabled: ,
  "3": <button
    aria-checked="false"
    class="dcloud-switch dcloud-switch-small"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 4,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/slider/demo/dragableTrack.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track dcloud-slider-track-1"
      style="left:20%;right:auto;width:30%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="dcloud-slider-handle dcloud-slider-handle-1"
      role="slider"
      style="left:20%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="dcloud-slider-handle dcloud-slider-handle-2"
      role="slider"
      style="left:50%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/slider/demo/event.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="left:0%;right:auto;width:30%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="dcloud-slider-handle"
      role="slider"
      style="left:30%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "1": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track dcloud-slider-track-1"
      style="left:20%;right:auto;width:30%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="dcloud-slider-handle dcloud-slider-handle-1"
      role="slider"
      style="left:20%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="dcloud-slider-handle dcloud-slider-handle-2"
      role="slider"
      style="left:50%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/slider/demo/icon-slider.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="icon-wrapper"
  >
    <span
      aria-label="frown"
      class="anticon anticon-frown icon-wrapper-active"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="frown"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM512 533c-85.5 0-155.6 67.3-160 151.6a8 8 0 008 8.4h48.1c4.2 0 7.8-3.2 8.1-7.4C420 636.1 461.5 597 512 597s92.1 39.1 95.8 88.6c.3 4.2 3.9 7.4 8.1 7.4H664a8 8 0 008-8.4C667.6 600.3 597.5 533 512 533z"
        />
      </svg>
    </span>
    <div
      class="dcloud-slider"
    >
      <div
        class="dcloud-slider-rail"
      />
      <div
        class="dcloud-slider-track"
        style="left:0%;right:auto;width:0%"
      />
      <div
        class="dcloud-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="20"
        aria-valuemin="0"
        aria-valuenow="0"
        class="dcloud-slider-handle"
        role="slider"
        style="left:0%;right:auto;transform:translateX(-50%)"
        tabindex="0"
      />
      <div
        class="dcloud-slider-mark"
      />
    </div>
    <span
      aria-label="smile"
      class="anticon anticon-smile"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/slider/demo/input-number.md correctly 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="dcloud-row"
    >
      <div
        class="dcloud-col dcloud-col-12"
      >
        <div
          class="dcloud-slider"
        >
          <div
            class="dcloud-slider-rail"
          />
          <div
            class="dcloud-slider-track"
            style="left:0%;right:auto;width:0%"
          />
          <div
            class="dcloud-slider-step"
          />
          <div
            aria-disabled="false"
            aria-valuemax="20"
            aria-valuemin="1"
            aria-valuenow="1"
            class="dcloud-slider-handle"
            role="slider"
            style="left:0%;right:auto;transform:translateX(-50%)"
            tabindex="0"
          />
          <div
            class="dcloud-slider-mark"
          />
        </div>
      </div>
      <div
        class="dcloud-col dcloud-col-4"
      >
        <div
          class="dcloud-input-number"
          style="margin:0 16px"
        >
          <div
            class="dcloud-input-number-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="dcloud-input-number-handler dcloud-input-number-handler-up"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="up"
                class="anticon anticon-up dcloud-input-number-handler-up-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-disabled="true"
              aria-label="Decrease Value"
              class="dcloud-input-number-handler dcloud-input-number-handler-down dcloud-input-number-handler-down-disabled"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down dcloud-input-number-handler-down-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            class="dcloud-input-number-input-wrap"
          >
            <input
              aria-valuemax="20"
              aria-valuemin="1"
              aria-valuenow="1"
              autocomplete="off"
              class="dcloud-input-number-input"
              role="spinbutton"
              step="1"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-row"
    >
      <div
        class="dcloud-col dcloud-col-12"
      >
        <div
          class="dcloud-slider"
        >
          <div
            class="dcloud-slider-rail"
          />
          <div
            class="dcloud-slider-track"
            style="left:0%;right:auto;width:0%"
          />
          <div
            class="dcloud-slider-step"
          />
          <div
            aria-disabled="false"
            aria-valuemax="1"
            aria-valuemin="0"
            aria-valuenow="0"
            class="dcloud-slider-handle"
            role="slider"
            style="left:0%;right:auto;transform:translateX(-50%)"
            tabindex="0"
          />
          <div
            class="dcloud-slider-mark"
          />
        </div>
      </div>
      <div
        class="dcloud-col dcloud-col-4"
      >
        <div
          class="dcloud-input-number"
          style="margin:0 16px"
        >
          <div
            class="dcloud-input-number-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="dcloud-input-number-handler dcloud-input-number-handler-up"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="up"
                class="anticon anticon-up dcloud-input-number-handler-up-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-disabled="true"
              aria-label="Decrease Value"
              class="dcloud-input-number-handler dcloud-input-number-handler-down dcloud-input-number-handler-down-disabled"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down dcloud-input-number-handler-down-inner"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            class="dcloud-input-number-input-wrap"
          >
            <input
              aria-valuemax="1"
              aria-valuemin="0"
              aria-valuenow="0"
              autocomplete="off"
              class="dcloud-input-number-input"
              role="spinbutton"
              step="0.01"
              value="0.00"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/slider/demo/mark.md correctly 1`] = `
LoadedCheerio {
  "0": <h4>
    included=true
  </h4>,
  "1": <div
    class="dcloud-slider dcloud-slider-with-marks"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="left:0%;right:auto;width:37%"
    />
    <div
      class="dcloud-slider-step"
    >
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:0%"
      />
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:26%"
      />
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:37%"
      />
      <span
        class="dcloud-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="dcloud-slider-handle"
      role="slider"
      style="left:37%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    >
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:0%"
      >
        0°C
      </span>
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:26%"
      >
        26°C
      </span>
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:37%"
      >
        37°C
      </span>
      <span
        class="dcloud-slider-mark-text"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>,
  "2": <div
    class="dcloud-slider dcloud-slider-with-marks"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track dcloud-slider-track-1"
      style="left:26%;right:auto;width:11%"
    />
    <div
      class="dcloud-slider-step"
    >
      <span
        class="dcloud-slider-dot"
        style="left:0%"
      />
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:26%"
      />
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:37%"
      />
      <span
        class="dcloud-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="26"
      class="dcloud-slider-handle dcloud-slider-handle-1"
      role="slider"
      style="left:26%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="dcloud-slider-handle dcloud-slider-handle-2"
      role="slider"
      style="left:37%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    >
      <span
        class="dcloud-slider-mark-text"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:0%"
      >
        0°C
      </span>
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:26%"
      >
        26°C
      </span>
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:37%"
      >
        37°C
      </span>
      <span
        class="dcloud-slider-mark-text"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>,
  "3": <h4>
    included=false
  </h4>,
  "4": <div
    class="dcloud-slider dcloud-slider-with-marks"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-step"
    >
      <span
        class="dcloud-slider-dot"
        style="left:0%"
      />
      <span
        class="dcloud-slider-dot"
        style="left:26%"
      />
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:37%"
      />
      <span
        class="dcloud-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="dcloud-slider-handle"
      role="slider"
      style="left:37%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    >
      <span
        class="dcloud-slider-mark-text"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:0%"
      >
        0°C
      </span>
      <span
        class="dcloud-slider-mark-text"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:26%"
      >
        26°C
      </span>
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:37%"
      >
        37°C
      </span>
      <span
        class="dcloud-slider-mark-text"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>,
  "5": <h4>
    marks & step
  </h4>,
  "6": <div
    class="dcloud-slider dcloud-slider-with-marks"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="left:0%;right:auto;width:37%"
    />
    <div
      class="dcloud-slider-step"
    >
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:0%"
      />
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:26%"
      />
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:37%"
      />
      <span
        class="dcloud-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="dcloud-slider-handle"
      role="slider"
      style="left:37%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    >
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:0%"
      >
        0°C
      </span>
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:26%"
      >
        26°C
      </span>
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:37%"
      >
        37°C
      </span>
      <span
        class="dcloud-slider-mark-text"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>,
  "7": <h4>
    step=null
  </h4>,
  "8": <div
    class="dcloud-slider dcloud-slider-with-marks"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="left:0%;right:auto;width:37%"
    />
    <div
      class="dcloud-slider-step"
    >
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:0%"
      />
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:26%"
      />
      <span
        class="dcloud-slider-dot dcloud-slider-dot-active"
        style="left:37%"
      />
      <span
        class="dcloud-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="dcloud-slider-handle"
      role="slider"
      style="left:37%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    >
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:0%"
      >
        0°C
      </span>
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:26%"
      >
        26°C
      </span>
      <span
        class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:37%"
      >
        37°C
      </span>
      <span
        class="dcloud-slider-mark-text"
        style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 9,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/slider/demo/reverse.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="right:0%;left:auto;width:30%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="dcloud-slider-handle"
      role="slider"
      style="right:30%;left:auto;transform:translateX(+50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "1": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track dcloud-slider-track-1"
      style="right:20%;left:auto;width:30%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="dcloud-slider-handle dcloud-slider-handle-1"
      role="slider"
      style="right:20%;left:auto;transform:translateX(+50%)"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="dcloud-slider-handle dcloud-slider-handle-2"
      role="slider"
      style="right:50%;left:auto;transform:translateX(+50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "2": Reversed: ,
  "3": <button
    aria-checked="true"
    class="dcloud-switch dcloud-switch-small dcloud-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 4,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/slider/demo/show-tooltip.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="left:0%;right:auto;width:30%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="dcloud-slider-handle dcloud-tooltip-open"
      role="slider"
      style="left:30%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div>
      <div
        class="dcloud-tooltip dcloud-slider-tooltip"
        style="opacity:0"
      >
        <div
          class="dcloud-tooltip-content"
        >
          <div
            class="dcloud-tooltip-arrow"
          >
            <span
              class="dcloud-tooltip-arrow-content"
            />
          </div>
          <div
            class="dcloud-tooltip-inner"
            role="tooltip"
          >
            30
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/slider/demo/tip-formatter.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="left:0%;right:auto;width:0%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="dcloud-slider-handle"
      role="slider"
      style="left:0%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "1": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="left:0%;right:auto;width:0%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="dcloud-slider-handle"
      role="slider"
      style="left:0%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/slider/demo/vertical.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    style="display:inline-block;height:300px;margin-left:70px"
  >
    <div
      class="dcloud-slider dcloud-slider-vertical"
    >
      <div
        class="dcloud-slider-rail"
      />
      <div
        class="dcloud-slider-track"
        style="bottom:0%;top:auto;height:30%"
      />
      <div
        class="dcloud-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        class="dcloud-slider-handle"
        role="slider"
        style="bottom:30%;top:auto;transform:translateY(+50%)"
        tabindex="0"
      />
      <div
        class="dcloud-slider-mark"
      />
    </div>
  </div>,
  "1": <div
    style="display:inline-block;height:300px;margin-left:70px"
  >
    <div
      class="dcloud-slider dcloud-slider-vertical"
    >
      <div
        class="dcloud-slider-rail"
      />
      <div
        class="dcloud-slider-track dcloud-slider-track-1"
        style="bottom:20%;top:auto;height:30%"
      />
      <div
        class="dcloud-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        class="dcloud-slider-handle dcloud-slider-handle-1"
        role="slider"
        style="bottom:20%;top:auto;transform:translateY(+50%)"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="dcloud-slider-handle dcloud-slider-handle-2"
        role="slider"
        style="bottom:50%;top:auto;transform:translateY(+50%)"
        tabindex="0"
      />
      <div
        class="dcloud-slider-mark"
      />
    </div>
  </div>,
  "2": <div
    style="display:inline-block;height:300px;margin-left:70px"
  >
    <div
      class="dcloud-slider dcloud-slider-with-marks dcloud-slider-vertical"
    >
      <div
        class="dcloud-slider-rail"
      />
      <div
        class="dcloud-slider-track dcloud-slider-track-1"
        style="bottom:26%;top:auto;height:11%"
      />
      <div
        class="dcloud-slider-step"
      >
        <span
          class="dcloud-slider-dot"
          style="bottom:0%"
        />
        <span
          class="dcloud-slider-dot dcloud-slider-dot-active"
          style="bottom:26%"
        />
        <span
          class="dcloud-slider-dot dcloud-slider-dot-active"
          style="bottom:37%"
        />
        <span
          class="dcloud-slider-dot"
          style="bottom:100%"
        />
      </div>
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="26"
        class="dcloud-slider-handle dcloud-slider-handle-1"
        role="slider"
        style="bottom:26%;top:auto;transform:translateY(+50%)"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="37"
        class="dcloud-slider-handle dcloud-slider-handle-2"
        role="slider"
        style="bottom:37%;top:auto;transform:translateY(+50%)"
        tabindex="0"
      />
      <div
        class="dcloud-slider-mark"
      >
        <span
          class="dcloud-slider-mark-text"
          style="margin-bottom:-50%;bottom:0%"
        >
          0°C
        </span>
        <span
          class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
          style="margin-bottom:-50%;bottom:26%"
        >
          26°C
        </span>
        <span
          class="dcloud-slider-mark-text dcloud-slider-mark-text-active"
          style="margin-bottom:-50%;bottom:37%"
        >
          37°C
        </span>
        <span
          class="dcloud-slider-mark-text"
          style="margin-bottom:-50%;bottom:100%;color:#f50"
        >
          <strong>
            100°C
          </strong>
        </span>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
